--- a/index.css
+++ b/index.css
@@ -1,3 +1,61 @@
 body {
-    margin: 0;
+    margin:50;
+    background-color:#1F2937;
+}
+
+#first-line {
+    color:white;
+    font-weight: 800;
+}
+
+h1 {
+   color: #10B981; 
+   font-weight: 800;
+}
+
+h2 {
+    color: #D5D4D8;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
+#generate-btn {
+    width: 191px;
+    height: 42px;
+    margin-top: 28px;
+    margin: 9px 17px 15px;
+    border: none;
+    border-radius: 6px;
+    background-color: #10B981;
+    color: #FFFFFF;
+ 
+}
+
+#password-btn {
+    width: 446px;
+    border-top: 1px solid #2F3E53;
+    display: flex;
+    justify-content:space-around;
+    padding-top: 35px;
+}
+
+#password1-el {
+    width: 211px;
+    height: 39px;
+    background-color: #273549;
+    border: none;
+    border-radius: 6px;
+}
+
+#password2-el {
+    width: 211px;
+    height: 39px;
+    background-color: #273549;
+    border: none;
+    border-radius: 6px;
 }
